// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar Component should match snapshot for collapsed state 1`] = `
<aside
  class="ant-layout-sider ant-layout-sider-light ant-layout-sider-collapsed sidebarContainer css-dev-only-do-not-override-1vjf2v5"
  style="flex: 0 0 60px; max-width: 60px; min-width: 60px; width: 60px;"
>
  <div
    class="ant-layout-sider-children"
  >
    <div
      class="logoContainer ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center"
      style="gap: 8px;"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-1vjf2v5"
        style="font-weight: 600; font-size: 20px;"
      >
        <img
          alt="Sharp AI"
          height="35"
          src="/images/sharp-logo.png"
        />
      </span>
    </div>
    <div
      class=" mt ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center ant-flex-vertical"
      style="gap: 10px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
        title="Expand Sidebar"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="menu-unfold"
            class="anticon anticon-menu-unfold"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-unfold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM142.4 642.1L298.7 519a8.84 8.84 0 000-13.9L142.4 381.9c-5.8-4.6-14.4-.5-14.4 6.9v246.3a8.9 8.9 0 0014.4 7z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <ul
      class="ant-menu ant-menu-root ant-menu-vertical ant-menu-light ant-menu-inline-collapsed css-dev-only-do-not-override-1vjf2v5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        aria-describedby="test-id"
        class="ant-menu-item ant-menu-item-selected"
        data-menu-id="rc-menu-uuid-test-models"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-label="home"
          class="anticon anticon-home ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard"
          >
            Models
          </a>
        </span>
      </li>
      <li
        aria-describedby="test-id"
        class="ant-menu-item"
        data-menu-id="rc-menu-uuid-test-embeddings"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-label="unordered-list"
          class="anticon anticon-unordered-list ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="unordered-list"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard/embeddings"
          >
            Embeddings
          </a>
        </span>
      </li>
      <li
        aria-describedby="test-id"
        class="ant-menu-item"
        data-menu-id="rc-menu-uuid-test-completions"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-label="message"
          class="anticon anticon-message ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="message"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard/completions"
          >
            Completions
          </a>
        </span>
      </li>
      <li
        aria-describedby="test-id"
        class="ant-menu-item"
        data-menu-id="rc-menu-uuid-test-chat-completion"
        role="menuitem"
        tabindex="-1"
      >
        <span
          aria-label="message"
          class="anticon anticon-message ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="message"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard/chat-completion"
          >
            Chat Completion
          </a>
        </span>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</aside>
`;

exports[`Sidebar Component should match snapshot for expanded state 1`] = `
<aside
  class="ant-layout-sider ant-layout-sider-light sidebarContainer css-dev-only-do-not-override-1vjf2v5"
  style="flex: 0 0 200px; max-width: 200px; min-width: 200px; width: 200px;"
>
  <div
    class="ant-layout-sider-children"
  >
    <div
      class="logoContainer ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center ant-flex-justify-center"
      style="gap: 8px;"
    >
      <span
        class="ant-typography css-dev-only-do-not-override-1vjf2v5"
        style="font-weight: 600; font-size: 20px;"
      >
        <div
          class="fade-in ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-center"
          style="gap: 8px;"
        >
          <img
            alt="Sharp AI"
            height="35"
            src="/images/sharp-logo.png"
          />
          <span
            class="ant-typography css-dev-only-do-not-override-1vjf2v5"
            style="font-weight: 600; font-size: 19.444444444444443px;"
          >
            SharpAI
          </span>
        </div>
      </span>
    </div>
    <div
      class=" mt ant-flex css-dev-only-do-not-override-1vjf2v5 ant-flex-align-flex-end ant-flex-justify-center ant-flex-vertical"
      style="gap: 10px;"
    >
      <button
        class="ant-btn css-dev-only-do-not-override-1vjf2v5 ant-btn-text ant-btn-color-default ant-btn-variant-text ant-btn-icon-only"
        title="Collapse Sidebar"
        type="button"
      >
        <span
          class="ant-btn-icon"
        >
          <span
            aria-label="menu-fold"
            class="anticon anticon-menu-fold"
            role="img"
          >
            <svg
              aria-hidden="true"
              data-icon="menu-fold"
              fill="currentColor"
              focusable="false"
              height="1em"
              viewBox="64 64 896 896"
              width="1em"
            >
              <path
                d="M408 442h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8zm-8 204c0 4.4 3.6 8 8 8h480c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8H408c-4.4 0-8 3.6-8 8v56zm504-486H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 632H120c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h784c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM115.4 518.9L271.7 642c5.8 4.6 14.4.5 14.4-6.9V388.9c0-7.4-8.5-11.5-14.4-6.9L115.4 505.1a8.74 8.74 0 000 13.8z"
              />
            </svg>
          </span>
        </span>
      </button>
    </div>
    <ul
      class="ant-menu ant-menu-root ant-menu-inline ant-menu-light css-dev-only-do-not-override-1vjf2v5"
      data-menu-list="true"
      role="menu"
      tabindex="0"
    >
      <li
        aria-describedby="test-id"
        class="ant-menu-item ant-menu-item-selected"
        data-menu-id="rc-menu-uuid-test-models"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="home"
          class="anticon anticon-home ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="home"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M946.5 505L560.1 118.8l-25.9-25.9a31.5 31.5 0 00-44.4 0L77.5 505a63.9 63.9 0 00-18.8 46c.4 35.2 29.7 63.3 64.9 63.3h42.5V940h691.8V614.3h43.4c17.1 0 33.2-6.7 45.3-18.8a63.6 63.6 0 0018.7-45.3c0-17-6.7-33.1-18.8-45.2zM568 868H456V664h112v204zm217.9-325.7V868H632V640c0-22.1-17.9-40-40-40H432c-22.1 0-40 17.9-40 40v228H238.1V542.3h-96l370-369.7 23.1 23.1L882 542.3h-96.1z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard"
          >
            Models
          </a>
        </span>
      </li>
      <li
        aria-describedby="test-id"
        class="ant-menu-item"
        data-menu-id="rc-menu-uuid-test-embeddings"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="unordered-list"
          class="anticon anticon-unordered-list ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="unordered-list"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M912 192H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zm0 284H328c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h584c4.4 0 8-3.6 8-8v-56c0-4.4-3.6-8-8-8zM104 228a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0zm0 284a56 56 0 10112 0 56 56 0 10-112 0z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard/embeddings"
          >
            Embeddings
          </a>
        </span>
      </li>
      <li
        aria-describedby="test-id"
        class="ant-menu-item"
        data-menu-id="rc-menu-uuid-test-completions"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="message"
          class="anticon anticon-message ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="message"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard/completions"
          >
            Completions
          </a>
        </span>
      </li>
      <li
        aria-describedby="test-id"
        class="ant-menu-item"
        data-menu-id="rc-menu-uuid-test-chat-completion"
        role="menuitem"
        style="padding-left: 24px;"
        tabindex="-1"
      >
        <span
          aria-label="message"
          class="anticon anticon-message ant-menu-item-icon"
          role="img"
        >
          <svg
            aria-hidden="true"
            data-icon="message"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M464 512a48 48 0 1096 0 48 48 0 10-96 0zm200 0a48 48 0 1096 0 48 48 0 10-96 0zm-400 0a48 48 0 1096 0 48 48 0 10-96 0zm661.2-173.6c-22.6-53.7-55-101.9-96.3-143.3a444.35 444.35 0 00-143.3-96.3C630.6 75.7 572.2 64 512 64h-2c-60.6.3-119.3 12.3-174.5 35.9a445.35 445.35 0 00-142 96.5c-40.9 41.3-73 89.3-95.2 142.8-23 55.4-34.6 114.3-34.3 174.9A449.4 449.4 0 00112 714v152a46 46 0 0046 46h152.1A449.4 449.4 0 00510 960h2.1c59.9 0 118-11.6 172.7-34.3a444.48 444.48 0 00142.8-95.2c41.3-40.9 73.8-88.7 96.5-142 23.6-55.2 35.6-113.9 35.9-174.5.3-60.9-11.5-120-34.8-175.6zm-151.1 438C704 845.8 611 884 512 884h-1.7c-60.3-.3-120.2-15.3-173.1-43.5l-8.4-4.5H188V695.2l-4.5-8.4C155.3 633.9 140.3 574 140 513.7c-.4-99.7 37.7-193.3 107.6-263.8 69.8-70.5 163.1-109.5 262.8-109.9h1.7c50 0 98.5 9.7 144.2 28.9 44.6 18.7 84.6 45.6 119 80 34.3 34.3 61.3 74.4 80 119 19.4 46.2 29.1 95.2 28.9 145.8-.6 99.6-39.7 192.9-110.1 262.7z"
            />
          </svg>
        </span>
        <span
          class="ant-menu-title-content"
        >
          <a
            href="/dashboard/chat-completion"
          >
            Chat Completion
          </a>
        </span>
      </li>
    </ul>
    <div
      aria-hidden="true"
      style="display: none;"
    />
  </div>
</aside>
`;
